noting arguments and parameters of invocations